--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -80,6 +80,7 @@ jobs:
       - name: Print environment variables for main
         if: matrix.branch == 'main'
         run: |
+          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_MISSION_GO_JAPAN_STAGING_PROJECTID }}"
           echo "NEXT_PUBLIC_FIREBASE_ADMIN_PROJECTID=$NEXT_PUBLIC_FIREBASE_ADMIN_PROJECTID"
           echo "NEXT_PUBLIC_FIREBASE_ADMIN_CLIENTEMAIL=$NEXT_PUBLIC_FIREBASE_ADMIN_CLIENTEMAIL"
           echo "NEXT_PUBLIC_FIREBASE_ADMIN_PRIVATEKEY=$NEXT_PUBLIC_FIREBASE_ADMIN_PRIVATEKEY"
